# socket_fips

./: .CMakeLists.txt.swp  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  HOWTOINSTALL.md  Makefile  README.md  cmake.sh  cmake_install.cmake  compile_commands.json  hashfunc_benchmark  ip_blacklist.skel.h  ip_string_benchmark  mt.csv  nsyslog  oldREADME.md  poll_rbuf  replication_aux_data.ods  simplefail2ban  simplelogstash  st.csv  st10.csv  udp_server  udp_testsvr_w100k_nw10000k_c254.csv
Experiments/: Fail2ban_Baseline_Messung.ipynb  dns_50_5000_254_correct.csv  ebpfstats_2022-11-26_13-04-26_TCP_100_50.csv  tcp.pcap
experiments/: Fail2ban_Baseline_Messung.ipynb  Fail2ban_neue_baseline_messung.ipynb  README.md  dns_50_1000_254_correct.csv  dns_50_1000_50_correct.csv  dns_50_5000_50_correct.csv  dns_w50k_nw1000k_c254.csv  dns_w50k_nw1000k_c50.csv  ebpfstats_2022-11-30_01-03-40_UDP_50_10_254.csv  ebpfstats_2022-11-30_18-49-34_TCP_50_1000.csv  tcp_w1000k_nw50k.csv  udp_w50k_nw10k_c50.csv
experiments/final-measurement/: .~lock.aux_data.ods#  Fail2ban_neue_baseline_messung.ipynb  aux_data.ods  fail2ban_v10k_iv10k_c1016.csv  fail2ban_v10k_iv10k_c1016_short.csv  fail2ban_v50k_iv1m_c254.csv  fail2ban_v50k_iv1m_c254_short.csv  final_measurents.ipynb  simplefail2ban_disk_ip46_v10k_iv100k_c131086.csv  simplefail2ban_disk_ip46_v10k_iv10m_c131086.csv  simplefail2ban_disk_ip46_v10k_iv1m_c131086.csv  simplefail2ban_disk_ip4_v10k_iv10m_c65534.csv  simplefail2ban_disk_ip4_v10k_iv1m_c65534.csv  simplefail2ban_disk_ip6_v10k_iv100k_c65534.csv  simplefail2ban_disk_ip6_v10k_iv10m_c65534.csv  simplefail2ban_disk_ipv46_v10k_iv100k_c131068.csv  simplefail2ban_disk_ipv46_v10k_iv10m_c131068.csv  simplefail2ban_disk_ipv46_v10k_iv1m_c131068.csv  simplefail2ban_disk_ipv4_v10k_iv100k_c65534.csv  simplefail2ban_disk_ipv4_v10k_iv10m_c65534.csv  simplefail2ban_disk_ipv4_v10k_iv1m_c65534.csv  simplefail2ban_disk_ipv6_v10k_iv100k_c65534.csv  simplefail2ban_disk_ipv6_v10k_iv10m_c65534.csv  simplefail2ban_disk_ipv6_v10k_iv1m_c65534.csv  simplefail2ban_shm_2r_ip46_v10k_iv1m_c131086.csv  simplefail2ban_shm_2r_ipv46_v10k_iv10m_c131068.csv  simplefail2ban_shm_2r_or_ipv46_v10k_iv10m_c131068.csv  simplefail2ban_shm_ip46_v10k_iv100k_c132086.csv  simplefail2ban_shm_ip46_v10k_iv10m_c131086.csv  simplefail2ban_shm_ip46_v10k_iv10m_c131086_b60.csv  simplefail2ban_shm_ip46_v10k_iv10m_c20988.csv  simplefail2ban_shm_ip46_v10k_iv10m_c508.csv  simplefail2ban_shm_ip46_v10k_iv1m_c131086.csv  simplefail2ban_shm_ip4_v10k_iv100k_c65534.csv  simplefail2ban_shm_ip4_v10k_iv10m_c65534.csv  simplefail2ban_shm_ip6_v10k_iv100k_c65534.csv  simplefail2ban_shm_ip6_v10k_iv10m_c65534.csv  simplefail2ban_shm_ip6_v10k_iv1m_c65534.csv  simplefail2ban_shm_ipv46_v10k_iv100k_c131068.csv  simplefail2ban_shm_ipv46_v10k_iv10m_c131068.csv  (+12 more)
experiments/final-measurements-vonRauchhaupt/: README.md  finalMeasurements.ipynb
experiments/final-measurements_vonRauchhaupt/: README.md  finalMeasurements.ipynb  overviewFinalMeasurements.csv  overviewFinalMeasurements.xlsx
experiments/measurements-vonRauchhaupt/: README.md
experiments/old-data/: Fail2ban_neue_baseline_messung.ipynb  bind_w100k_nw10000k_c254-2.csv  bind_w100k_nw10000k_c254.csv  dns_w50k_nw5000k_c254.csv  dns_w50k_nw5000k_c50.csv  exp1_1m_50k_254c.csv  tcp_w1000k_nw1000k.csv  tcp_w50k_nw100k.csv  udp_new_w100k_nw10000k_c254.csv  udp_w10k_nw50k_c254.csv  udp_w10k_nw50k_c50.csv
experiments/preliminary-socket-measurements/: ebpfstats_2024-05-29_02-54-07.csv
experiments/replication/: ebpfstats_2023-05-02_23-55-54.csv  ebpfstats_2023-05-03_00-14-32.csv  ebpfstats_2023-05-03_00-32-29.csv  ebpfstats_2023-05-03_00-49-57.csv  ebpfstats_2023-05-03_01-08-44.csv  ebpfstats_2023-05-03_01-25-21.csv  (+4 more)
latex/: README.md
latex_vonRauchhaupt/: README.md  chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  chapter5.tex  chapter6.tex  cs-thesis.cls  intro.tex  literature.bib  outro.tex  thesis.cfg  thesis.tex
socketPrototype/: Makefile  README.md  connection.h  recvSelect  recvSelect.c  sendMultConnect  sendMultConnect.c
src/: CMakeLists.txt  README.md
src/ebpf-helpers/: ebpfstats_2023-04-04_12-34-59.csv  ebpfstats_2024-05-29_02-45-53.csv  ebpfstats_2024-06-11_18-32-19.csv  sock_IPv4v6_100k_2ndReader_1.csv  sock_IPv4v6_100k_2ndReader_2.csv  sock_IPv4v6_10m_2ndReader_2.csv  sock_IPv4v6_1m_2ndReader_1.csv  sock_IPv4v6_1m_2ndReader_2.csv  sock_IPv4v6_20m_2ndReader_1.csv
src/lib/: CMakeLists.txt  atomic_hashtable.c  blacklist_common.c  ebpf_utils.c  ip_blacklist.bpf.c  ip_hashtable.c  ip_llist.c  ip_to_str.c  ipc.c  msgq.c  ringbuf.c  shm_ringbuf.c  sock_comm.c  uring_getline.c
src/lib/include/: atomic_hashtable.h  blacklist_common.h  ebpf_utils.h  io_ipc.h  ip_hashtable.h  ip_llist.h  ip_to_str.h  ipc.h  jail.h  msgq.h  ringbuf.h  shm_ringbuf.h  sock.h  sock_comm.h  uring_getline.h  xdp_ddos01_blacklist_common.h
src/lib/include/io_ipc/: shm_ringbuf.h
src/lib/include/ipc/: shm.h  shm_ringbuf.h
src/libs/: ip_to_str.c  ip_to_str.h  ringbuf.c
src/programs/: blacklist_common.c  ebpf_blacklist_cmd.c  hashtable_test.c  ip_blacklist.bpf.c  ipc.h  poll_rbuf.c  simplefail2ban.c  simplefail2ban_signer.c  simplelogstash.c  simplelogstash_4socks.c  test.c  test_getline.c  traffic_test.py  udp_server.c  udp_server_shm.c  uring_test.c
src/programs/ipc_test/: udp_server.c
src/scripts/dut/: add_arp.sh  add_ip.sh  add_neigh.sh  clear_logs.sh  lo_udp_traffic.py  setup_exp1.sh
src/scripts/traffic_gen/: add_arp.sh  add_ip.sh  launch_trex.sh  launch_trex_client.sh  udp_testsvr_traffic_v4.py
src/scripts/traffic_gen_vonRauchhaupt/: udpTraffic_IPv4_131068.py  udpTraffic_IPv4_65534.py  udpTraffic_IPv4v6_131068.py  udpTraffic_IPv6_131068.py  udpTraffic_IPv6_65534.py
src/traffic_gen/: udp_testsvr_traffic.py
src/udp_server/: Makefile
src/udp_server/ipc_test/: shmem_test.c  socket_test.c  test_client.c
src/udp_test_app/: Makefile  log.txt  pipe  pipe_test.c  send_udp.py  server  socket  socket_test  test_client.c  test_regex.py  udp_server.c
src/utilities/: ip_string_benchmark.c
(+358 files in other folders)
